# agents-Ed

./: Agent Orchestration Frameworks.md  WARP.md  pyproject.toml
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  README.md  app.py
1_foundations/me/: summary.txt
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
2_openai/deep_research_prolim/: deep_research.py  deep_research_agents.py  email_agent.py  get_model.py  planner_agent.py  research_manager.py  search_agent.py  writer_agent.py
3_crew/debate_arun/: README.md  pyproject.toml
3_crew/debate_arun/knowledge/: user_preference.txt
3_crew/debate_arun/src/debate_arun/: crew.py  main.py
3_crew/debate_arun/src/debate_arun/config/: agents.yaml
