[project]
name = "debate_arun"
version = "0.1.0"
description = "debate-arun using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
debate_arun = "debate_arun.main:run"
run_crew = "debate_arun.main:run"
train = "debate_arun.main:train"
replay = "debate_arun.main:replay"
test = "debate_arun.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
